--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@
     --neutral-very-light-gray: hsl(0, 0%, 98%);
     --neutral-white: hsl(0, 0%, 100%);
 }
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 body{
     font-family: 'Public Sans', sans-serif;
     font-size: 18px;
@@ -21,6 +28,7 @@ body{
     width: 1200px;
     max-width: 100%;
     margin: 0 auto;
+    /* box-sizing: border-box; */
 }
 h1, h2, h3, h4, h5, h6{
     color: var(--primary-dark-blue);
@@ -37,11 +45,16 @@ header{
     z-index: 999;
     position: relative;
 }
+.hamburger{
+    display: none;
+}
 .navigation{
+    display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
-.nav{
+.nav-menu-links{
     display: flex;
     margin: 0;
     padding: 0;
@@ -219,4 +232,124 @@ footer{
     width: 550px;
     max-width: 100%;
     text-align: end;
+}
+
+/* MOBILE RESPONSIVE */
+@media screen and (max-width: 768px){
+    /* NAVIGATION */
+    .nav-menu-links{
+        display: none;
+    }
+    nav ul.show{
+        display: block;
+        position: absolute;
+        top: 130px;
+        left: 5%;
+        right: 25%;
+        background-color: var(--neutral-white);
+        width: 90%;
+        border-radius: 5px;
+        -webkit-box-shadow: 0px 50px 118px 10px rgba(0,0,0,1);
+        -moz-box-shadow: 0px 50px 118px 10px rgba(0,0,0,1);
+        box-shadow: 0px 50px 118px 10px rgba(0,0,0,1);
+    }
+    nav ul.show li{
+        padding: 14px 0;
+    }
+    .hamburger{
+        display: flex;
+        background-color: transparent;
+        border: 0;
+        cursor: pointer;
+    }
+    .hamburger.show .mobiles{
+        display: none;
+    }
+    .close{
+        display: none;
+    }
+    .hamburger.show .open{
+        display: none;
+    }
+    .hamburger.show .close{
+        display: block;
+    }
+    .hmaburger:focus{
+        outline: none;
+    }
+    .navigation .btn{
+        display: none;
+    }
+    .navigation{
+        flex-direction: row;
+    }
+    .nav-menu-links{
+        flex-direction: column;
+    }
+    .flex{
+        flex-direction: column;
+    }
+    .container{
+        width: auto;
+        padding: 0 25px;
+        text-align: center;
+    }
+    .next-generation-mobile{
+        flex-direction: column-reverse;
+    }
+    .next-generation{
+        background-image: url(/images/bg-intro-mobile.svg);
+        background-size: 100%;
+        background-position-x: 0;
+        background-position-y: -77px;
+    }
+    .right-1 img{
+        margin: -252px auto;
+        width: 768px;
+        max-width: 100%;
+    }
+    .left-1{
+        margin: 400px 0 100px;
+        text-align: center;
+        padding: 0;
+    }
+    h1, h2, h5{
+        font-size: 2em;
+    }
+    p{
+        font-size: 14px;
+    }
+    .single-feature{
+        padding: 0 0 30px;
+    }
+    #why-text{
+        padding: 0;
+    }
+    .latest-article{
+        width: 100%;
+    }
+    .article-content{
+        text-align: left;
+    }
+    .article-content p{
+        line-height: 20px;
+        font-size: 13px;
+    }
+    h5{
+        margin-top: 0;
+    }
+    .social-links-container{
+        width: 100%;
+    }
+    .social-links{
+        justify-content: center;
+        margin: 40px 0 0;
+    }
+    .footer-menu-container{
+        flex-direction: column;
+        margin: 40px 0 20px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
